--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,16 @@
           <a href="#">{{post.author.name}}</a>
           on {{post.date}}
           <!-- TODO: Only show delete button if user id is 1 (admin user) -->
-          {% if current_user.id==1 %}
-            <a href="{{url_for('delete_post', post_id=post.id) }}">✘</a>
+          {% if current_user.is_admin %}
+            <form
+              action="{{ url_for('delete_post', post_id=post.id) }}"
+              method="post"
+              class="d-inline" 
+              onsubmit="return confirm('Are you sure you want to delete this post?');">
+              <button type="submit" class="btn btn-outline-danger btn-sm">
+                Delete Post
+              </button>
+            </form>
           {% endif %}
         </p>
       </div>
@@ -44,7 +52,7 @@
       <!-- New Post -->
       <!-- TODO: Only show Create Post button if user id is 1 (admin user) -->
       <div class="d-flex justify-content-end mb-4">
-        {% if current_user.id==1 %}
+        {% if current_user.is_admin %}
         <a
           class="btn btn-primary float-right"
           href="{{url_for('add_new_post')}}"
