--- a/templates/post.html
+++ b/templates/post.html
@@ -28,7 +28,7 @@
         {{ post.body|safe }}
         <!--TODO: Only show Edit Post button if user id is 1 (admin user) -->
         <div class="d-flex justify-content-end mb-4">
-        {% if current_user.id==1 %}
+        {% if current_user.is_admin %}
           <a
             class="btn btn-primary float-right" 
             href="{{url_for('edit_post', post_id=post.id)}}">
