--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,12 @@
 {% include "header.html" %}
 
 <!-- Page Header-->
-<header
-  class="masthead"
-  style="background-image: url('../static/assets/img/about-bg.jpg')"
->
+<header class="masthead" style="background-image: url('../static/assets/img/about-bg.jpg')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="page-heading">
-          <h1>About Me</h1>
+          <h1>About Us</h1>
           <span class="subheading">This is what I do.</span>
         </div>
       </div>
@@ -20,25 +17,94 @@
 <main class="mb-4">
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-      <div class="col-md-10 col-lg-8 col-xl-7">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe
-          nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis
-          sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
-          consectetur?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius
-          praesentium recusandae illo eaque architecto error, repellendus iusto
-          reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in
-          officia voluptas voluptatibus, minus!
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-          consequuntur magnam, excepturi aliquid ex itaque esse est vero natus
-          quae optio aperiam soluta voluptatibus corporis atque iste neque sit
-          tempora!
-        </p>
+      <div class="">
+        <div class="card shadow-sm" style="width: 18rem;">
+
+          <div class="front" style="background-image: url();">
+            <p class="large">nothing</p>
+          </div>
+          <!-- Card Body -->
+          <div class="back">
+
+            <h5 class="card-title">
+              This is Title
+              <small class="text-muted">(This is date)</small>
+            </h5>
+
+            <p class="mb-1">
+              <strong>Rating:</strong>
+              <i class="fas fa-star text-warning"></i>
+            </p>
+
+            <p class="card-text fst-italic">"review"</p>
+
+            <p class="card-text">
+              description
+            </p>
+
+            <div class="d-flex gap-2">
+              <a href="" class="btn btn-primary btn-sm">Update</a>
+              <a href="" class="btn btn-danger btn-sm">Delete</a>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="card">
+
+  <!-- FRONT -->
+  <div class="front" style="background-image: url('IMAGE_URL_HERE');">
+    <p class="large">Nothing</p>
+  </div>
+
+  <!-- BACK -->
+  <div class="back">
+    <div>
+
+      <div class="title">
+        This is Title
+        <span class="release_date">(This is date)</span>
+      </div>
+
+      <div class="rating">
+        <label>Rating</label>
+        ★★★★☆
+      </div>
+
+      <p class="review">"review"</p>
+
+      <p class="overview">
+        description
+      </p>
+
+      <a href="#" class="button">Update</a>
+      <a href="#" class="button delete-button">Delete</a>
+
+    </div>
+  </div>
+
+</div>
+
+        <div class="card" style="width: 18rem;">
+          <div class="front" style="background-image: url();">
+            <p class="large">nothing</p>
+          </div>
+          <div class="back">
+            <div>
+              <h5 class="card-title">
+                This is Title
+                <small class="text-muted">(This is date)</small>
+              </h5>
+              <div class="rating">
+                <label>Rating</label>
+                <i class="fas fa-star star"></i>
+              </div>
+              <p class="review">"review"</p>
+              <p class="overview">description
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
