--- a/templates/header.html
+++ b/templates/header.html
@@ -38,10 +38,7 @@
       href="{{ url_for('static', filename='css/styles.css') }}"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/styles2.css') }}"
-    />
+    
     {% endblock %}
   </head>
   <body>
@@ -62,6 +59,7 @@
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
+          <!-- list of navbar items  -->
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="nav-item">
               <a
@@ -84,14 +82,6 @@
                 class="nav-link px-lg-3 py-3 py-lg-4"
                 href="{{ url_for('register') }}"
                 >Register</a
-              >
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a
-                class="nav-link px-lg-3 py-3 py-lg-4"
-                href="{{ url_for('logout') }}"
-                >Log Out</a
               >
             </li>
             {% endif %}
@@ -154,7 +144,6 @@
   </ul>
 </li>
 {% endif %}
-
           </ul>
         </div>
       </div>
