--- a/templates/admin.html
+++ b/templates/admin.html
@@ -202,6 +202,7 @@
                                             <th>#</th>
                                             <th>Name</th>
                                             <th>Email</th>
+                                            <th>Role</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -210,6 +211,18 @@
                                             <td>{{ loop.index }}</td>
                                             <td>{{ user.name }}</td>
                                             <td>{{ user.email }}</td>
+                                            <td>
+                                                {% if user.is_admin %}
+                                                    <span class="badge bg-danger">Admin</span>
+                                                    {% if user.is_author %}
+                                                    <span class="badge bg-primary">Author</span>
+                                                    {% endif %}
+                                                {% elif user.is_author %}
+                                                    <span class="badge bg-primary">Author</span>
+                                                {% else %}
+                                                    <span class="badge bg-secondary">Reader</span>
+                                                {% endif %}
+                                            </td>
                                         </tr>
                                         {% endfor %}
                                     </tbody>
