--- a/templates/404.html
+++ b/templates/404.html
@@ -9,7 +9,7 @@
   <div class="container text-center py-5">
     <h1 class="display-4">404</h1>
     <p class="lead">The page you are looking for does not exist.</p>
-    <a href="{{ url_for('get_all_posts') }}" class="btn btn-primary">
+    <a href="{{ url_for('home') }}" class="btn btn-primary">
       Go Home
     </a>
   </div>
